# SimPlEC

./: .gitignore  LICENSE  README.md  output.txt  pyproject.toml  requirements.txt  setup.py  simplec.py  test.ipynb
.github/workflows/: lint.yml  tests.yml
examples/: realistic_example.ipynb  realistic_example_eventbased.ipynb  run_main_2.py
examples/models/: building_model.py
mosaik_implementation/: data_analysis.ipynb  run_main.py  run_main_1.py  test.ipynb
mosaik_implementation/data/output/: df_BuildingSim-0_Model_0.pkl  df_BuildingSim-0_Model_5.pkl  df_Clock-0_Clock.pkl  df_HeatPump-0_HeatPump_0.pkl  df_HeatPump-0_HeatPump_1.pkl  df_Weather-0_Weather_0.pkl  df_Weather-0_Weather_18.pkl
mosaik_implementation/models/: building_model.py  heat_pump.py  hyst_controller.py  weather_model.py
mosaik_implementation/simulator/: building_simulator.py  clock.py  collector.py  heatpump_simulator.py  hystcontroller_simulator.py  weather_simulator.py
own_implementation/: compare_timediscrete_and_eventbased.ipynb  output_data.pkl  output_data_test_3.pkl  realistic_example.ipynb  realistic_example_eventbased.ipynb  run_main.py  simple_example.ipynb  simulation.py  test.ipynb  test_2.ipynb  test_3.ipynb  test_4.ipynb
own_implementation/models/: building_model.py  heat_pump.py  hyst_controller.py  parent_model.py  weather_model.py
simplec_examples/: output_data_event.pkl  realistic_example.ipynb
simplec_examples/scenarios/: compare_timediscrete_and_eventbased.ipynb  many_modles_example.py  realistic_example_eventbased.ipynb  simple_example.ipynb  simple_example_multiinput.ipynb
src/: simplec.py
src/simplec_examples/models/: building_model.py  heat_pump.py  weather_model.py
tests/: test_compare_time_disc_vs_event_based.py  test_fresh_copy.py  test_graph_connections.py  test_multiinput.py  test_multiinput_multioutput.py  test_simple_scenario.py  test_topology_api.py  test_validate_model.py
(+7 files in other folders)
