[project]
name = "simplec"
dynamic = ["version"]
description = "Simulation Playground for Energy Communities (time discrete and evend discrete cosimulaton)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Valentin Seiler", email = "valentin.seiler@fhv.at"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "networkx",
    "matplotlib",
    "pandas",
    "tqdm",
    "scipy",
    "pytest",
    "pytest-cov",
    "pvlib",
    "pylint"
]

[project.urls]
Homepage = "https://github.com/erc-fhv/SimPlEC"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["simplec"]

# Automatically infere version from git tag
[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.pylint.main]
py-version = "3.11"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = []

